--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,39 @@ http {
 
     #gzip  on;
 
+    ## fxa-profile-server:
+    server {
+      listen 1111 ssl;
+
+      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://profile:1111;
+      }
+    }
+
+    ## syncserver:
+    server {
+      listen 5000 ssl;
+
+      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://sync:5000;
+      }
+    }
+
+    ## syncto:
+    server {
+      listen 8000 ssl;
+
+      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://syncto:8000;
+      }
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
 
