Append chain.pem to cert.pem, ref #3

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,10 +32,21 @@ http {
     server {
       listen 1111 ssl;
 
-      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate /fxa-cert/combined.pem;
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://profile:1111;
+      }
+    }
+
+    ## fxa-content-server:
+    server {
+      listen 3030 ssl;
+
+      ssl_certificate /fxa-cert/combined.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://content:3030;
       }
     }
 
@@ -43,7 +54,7 @@ http {
     server {
       listen 5000 ssl;
 
-      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate /fxa-cert/combined.pem;
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://sync:5000;
@@ -54,7 +65,7 @@ http {
     server {
       listen 8000 ssl;
 
-      ssl_certificate /fxa-cert/cert.pem;
+      ssl_certificate /fxa-cert/combined.pem;
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://syncto:8000;
@@ -63,4 +74,3 @@ http {
 
     include /etc/nginx/conf.d/*.conf;
 }
-
