--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,9 @@ http {
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://profile:1111;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
       }
     }
 
@@ -47,6 +50,9 @@ http {
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://content:3030;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
       }
     }
 
@@ -58,6 +64,9 @@ http {
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://sync:5000;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
       }
     }
 
@@ -69,6 +78,37 @@ http {
       ssl_certificate_key /fxa-cert/privkey.pem;
       location / {
         proxy_pass       http://syncto:8000;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
+      }
+    }
+
+    ## auth:
+    server {
+      listen 9000 ssl;
+
+      ssl_certificate /fxa-cert/combined.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://auth:9000;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
+      }
+    }
+
+    ## oauth:
+    server {
+      listen 9010 ssl;
+
+      ssl_certificate /fxa-cert/combined.pem;
+      ssl_certificate_key /fxa-cert/privkey.pem;
+      location / {
+        proxy_pass       http://oauth:9010;
+        proxy_pass_header Access-Control-Allow-Origin;
+        proxy_pass_header Access-Control-Allow-Methods;
+        proxy_pass_header Access-Control-Allow-Headers;
       }
     }
 
